Collapse Icon Position Fix

--- a/customization.css
+++ b/customization.css
@@ -277,7 +277,18 @@ svg[class^="ellipsis"] {
     }
 }
 
+/* Collapse Icon Position Fix */
+.containerDefault__29444 {
+  > div {
+    padding-left: 0.5em;
 
+    > div {
+      display: flex !important;
+      place-content: start !important;
+      flex-direction: row-reverse !important;
+    }
+  }
+}
 
 
 
